--- a/friends/src/index.scss
+++ b/friends/src/index.scss
@@ -1,11 +1,16 @@
 body {
   margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
 code {
@@ -17,5 +22,4 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
 }
